# intseq

./: README.md  intseq.cabal  primes.html
app/: Main.hs
src/: Intseq.hs
