name:                intseq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zack466/intseq#readme
license:             BSD3
license-file:        LICENSE
author:              Zachary Huang
maintainer:          zack466@gmail.com
copyright:           2021 Zachary Huang
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Intseq
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable main
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base >= 4.7 && < 5,
                    intseq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zack466/intseq
